
doc_exampledir = $(docdir)/examples

nobase_dist_doc_example_DATA = README dirmngr.conf bnetza-10r-ocsp.signer

nobase_dist_doc_example_DATA += \
        trusted-certs/README \
        trusted-certs/bnetza-10r-ca.crt \
        trusted-certs/S-TRUSTQualifiedRootCA2008-002.final.v3.509.crt \
        trusted-certs/S-TRUSTQualifiedRootCA2008-001.final.v3.509.crt

nobase_dist_doc_example_DATA += \
	extra-certs/bnetza-10r-ocsp-1.crt \
        extra-certs/bnetza-10r-ocsp-2.crt \
        extra-certs/bnetza-10r-ocsp-3.crt \
        extra-certs/bnetza-10r-ocsp-4.crt \
        extra-certs/bnetza-10r-ocsp-5.crt \
        extra-certs/bnetza-10r-ocsp-6.crt \
        extra-certs/bnetza-10r-ocsp-7.crt \
        extra-certs/bnetza-10r-ocsp-8.crt \
        extra-certs/bnetza-10r-ocsp-9.crt \
        extra-certs/bnetza-10r-ocsp-10.crt \
        extra-certs/bnetza-10r-ocsp-11.crt \
        extra-certs/bnetza-10r-ocsp-12.crt \
        extra-certs/S-TRUSTQualifiedSignatureCA2008-001.final.v3.509.crt \
        extra-certs/S-TRUSTQualifiedSignatureCA2008-002.final.v3.509.crt \
        extra-certs/S-TRUSTQualifiedSignatureCA2008-003.final.v3.509.crt \
        extra-certs/S-TRUSTQualifiedSignatureCA2008-004.final.v3.509.crt \
        extra-certs/S-TRUSTQualifiedSignatureCA2008-005.final.v3.509.crt \
        extra-certs/S-TRUSTQualifiedSignatureCA2008-006.final.v3.509.crt \
        extra-certs/S-TRUSTQualSigOCSP2008-001.final.v3.509.crt \
        extra-certs/S-TRUSTQualSigOCSP2008-002.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-003.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-004.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-005.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-006.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-007.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-008.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-009.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-010.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-011.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-012.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-013.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-014.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-015.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-016.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-017.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-018.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-019.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-020.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-021.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-022.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-023.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-024.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-025.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-026.final.v3.509.crt	\
        extra-certs/S-TRUSTQualSigOCSP2008-027.final.v3.509.crt \
        extra-certs/S-TRUSTQualSigOCSP2008-028.final.v3.509.crt


